<resources>
    <string name="app_name">Saina</string>
    <string name="title_lessons">Lessons</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_text">Word Text</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="home">Home</string>
    <string name="lessonimage">lessonImage</string>
    <string name="exercise_splash_text">Start Exercises</string>
    <string name="exercise_splash_start_button_text">Hell Yeah!</string>
    <string name="exercise_splash_title_text">Ready for a challenge?</string>
    <string name="title_exercise">Exercise</string>
    <string name="quiz_question">What does the sign say?</string>
    <string name="question_length_text">10 Questions in this quiz?</string>
    <string name="i_m_ready">I\'m ready</string>
    <string name="select">Select</string>
    <string name="predict">Predict</string>
    <string name="display_text">Select Image and press Predict</string>
    <string name="detect_zsl_numbers">Detect ZSL Numbers</string>
    <string name="Done">Done</string>
    <string name="Alphabet">Alphabet</string>
    <string name="Numbers">Numbers</string>
    <string name="detection">ZSL Detect</string>
    <string name="image_of_zimbabwe_sign_language_alphabet">image_of_zimbabwe_sign_language_alphabet</string>
    <string name="image_of_zimbabwe_sign_language_numbers">image_of_zimbabwe_sign_language_numbers</string>
    <string name="try_it">Try It</string>
    <string name="saina">Saina</string>
    <string name="sign_language_tutor">Sign Language Tutor</string>
    <string name="prev">Prev</string>
    <string name="warning_message">NB If image is not showing, make sure you have an active internet connection and wait a few seconds</string>
    <string name="take_picture">Take Picture</string>
    <string name="start">Start</string>

</resources>