<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_lessons"
        android:icon="@drawable/ic_baseline_play_circle_filled_24"
        android:title="@string/title_lessons" />
    <item
        android:id="@+id/navigation_numbers"
        android:icon="@drawable/ic_baseline_airplay_24"
        android:title="Detections" />
    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_baseline_flag_24"
        android:title="@string/title_exercise" />
    <item
        android:id="@+id/navigation_alphabet"
        android:icon="@drawable/ic_baseline_sort_by_alpha_24"
        android:title="@string/Alphabet" />


</menu>