<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_lessons"
        android:name="com.dennis.saina.ui.Lessons.LessonsFragment"
        android:label="@string/title_lessons"
        tools:layout="@layout/fragment_lessons" >
        <action
            android:id="@+id/action_navigation_lessons_to_navigation_exercise"
            app:destination="@id/navigation_exercise" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dennis.saina.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dennis.saina.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.dennis.saina.ui.exercises.ExerciseFragment"
        android:label="@string/title_exercise" />
    <fragment
        android:id="@+id/navigation_numbers"
        android:name="com.dennis.saina.ui.numbers.NumbersFragment"
        android:label="Detections"
        tools:layout="@layout/fragment_numbers" />
    <fragment
        android:id="@+id/navigation_alphabet"
        android:name="com.dennis.saina.ui.AlphabetFragment"
        android:label="Alphabet"
        tools:layout="@layout/fragment_alphabet" >
        <action
            android:id="@+id/action_navigation_alphabet_to_navigation_numbers"
            app:destination="@id/navigation_numbers" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dennis.saina.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_lessons"
            app:destination="@id/navigation_lessons" />
    </fragment>
</navigation>