<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="50dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/lessonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/word_text"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/lessonImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:contentDescription="@string/lessonimage"
                app:srcCompat="@drawable/googleg_standard_color_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/prevBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/previous"
                    android:src="@drawable/ic_baseline_skip_previous_24"
                    android:textAlignment="center"
                    android:textDirection="inherit" />

                <ImageButton
                    android:id="@+id/nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/next"
                    android:src="@drawable/ic_baseline_skip_next_24"
                    android:textAlignment="center"
                    android:textDirection="inherit" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>