<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="10dp"
    android:layout_gravity="center"
    tools:context=".ExerciseActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/questionCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question Count:"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scoreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Score:"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/question_length_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/Image"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:contentDescription="@string/lessonimage"
                app:srcCompat="@drawable/googleg_standard_color_18" />

            <RadioGroup
                android:id="@+id/questionGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton

                    android:id="@+id/firstAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton

                    android:id="@+id/secondAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/thirdAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

<!--                <Button-->
<!--                    android:id="@+id/prevBtn"-->
<!--                    android:clickable="false"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:text="@string/prev" />-->

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/next" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:text="Exit"
                android:textColor="@color/purple_700" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/warning_message"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoreView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Score:"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47" />

        <TextView
            android:id="@+id/scoreResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15/30"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.549" />

        <Button
            android:id="@+id/tryAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="Try Again"
            app:layout_constraintEnd_toStartOf="@+id/exitBtn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreResult" />

        <Button
            android:id="@+id/exitBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toEndOf="@+id/tryAgainBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.314" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>